# finance-ai-pack

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: PR1_SCaffold_Plan.md  architecture.md  operating_model.md
fixtures/ledger/: ledger_snapshot_2025-01.json
fixtures/odoo_statement_lines/: banks.json  nbc_usd_2025-01.json  nmb_tzs_2025-01.json
fixtures/vat/: odoo_vat_lines_2025-01.json  odoo_vat_lines_2025-02.json  tra_template.csv  tra_vat_2025-01.csv  vat_inputs_2025-01.json
src/finance_ai_pack/: __init__.py  cli.py  config.py
src/finance_ai_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/finance_ai_pack/connectors/odoo/: __init__.py  client.py  fixtures_adapter.py  live_adapter.py
src/finance_ai_pack/outputs/: __init__.py  writers.py
src/finance_ai_pack/recon/: __init__.py
src/finance_ai_pack/recon/bank/: __init__.py  service.py
src/finance_ai_pack/recon/ledger/: __init__.py  service.py
src/finance_ai_pack/recon/petty_cash/: __init__.py  service.py
src/finance_ai_pack/recon/vat/: __init__.py  service.py
src/finance_ai_pack/rules/: __init__.py  bank_registry.yml  gating_rules.yml  month_end_gating.py
tests/: test_cli.py  test_cli_commands.py  test_fixture_mode.py  test_live_odoo_integration.py  test_month_end_gating.py  test_period_validation.py  test_vat_pack.py
